--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "https://github.com/topcoy/topcore-node.git",
   "homepage": "https://github.com/topcoy/topcore-node",
   "bugs": {
-    "url": "https://github.com/TOP/topcore-node/issues"
+    "url": "https://github.com/topcoy/topcore-node/issues"
   },
   "contributors": [],
   "bin": {
@@ -26,7 +26,7 @@
   ],
   "dependencies": {
     "async": "^1.3.0",
-    "topd-rpc": "git://github.com/TOP/topd-rpc.git",
+    "topd-rpc": "git://github.com/topcoy/topd-rpc.git",
     "top-lib": "git://github.com/topcoy/topd-rpc.git#master",
     "bitcore-lib": "^0.13.13",
     "body-parser": "^1.13.3",
